samples/_failures_safe/1761474183_0d7873_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2dceb3e.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_c2dceb3e.c:172:5: error: expected declaration or statement at end of input
  172 |     }
      |     ^
